# BitFlow.DotNet

./: .dockerignore  .gitignore  .gitmodules  BitFlow.Dotnet.slnx  LICENSE  README.md  docker-compose.yml
docker/web/: Dockerfile  update-bitflow.sh
src/BitFlow.Api/: BitFlow.Api.csproj  BitFlow.Api.http  Program.cs
src/BitFlow.Api/Native/: BitFlowContext.cs  NativeMethods.cs
src/BitFlow.Native/: CMakeLists.txt
src/BitFlow.Native/include/: bitflow_native.h
src/BitFlow.Native/src/: bitflow_native.cpp  version.h.in
src/BitFlow.Web/: BitFlow.Web.csproj  Program.cs
src/BitFlow.Web/Components/: App.razor  _Imports.razor
src/BitFlow.Web/Components/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor
src/BitFlow.Web/Components/Pages/: Home.razor  Rewrite.razor
src/BitFlow.Web/Native/: BitFlowContext.cs  NativeMethods.cs
src/BitFlow.Web/Properties/: launchSettings.json
src/BitFlow.Web/wwwroot/: app.css
src/BitFlow.Web/wwwroot/js/: latex.js  site.js
